# victor-perching

./: .gitignore  justfile  pyproject.toml
data/: london_observations-2022.csv  victor_observations.csv
perching/: __init__.py
