[tool.poetry]
name = "perching"
version = "0.1.0"
description = ""
authors = ["Nick Kocharhook <nick@kocharhook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.22.0"
dash = "^2.17.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
